--- a/pixel/head.html
+++ b/pixel/head.html
@@ -1,11 +1,6 @@
-<script>
-  (function() {
-    var appId = "{{settings.gtmId}}";
-    if (!appId) {
-      console.error('Warning: No APP NAME ID is defined. Please configure it in the apps admin.');
-      return
-    }
-
-    // Add script here
-  })()
+<script type='text/javascript'>
+  (function (window) {
+    var storeName = "{{settings.storeName}}" || storeName;
+    window.storeName = storeName;
+  })(window);
 </script>
